--- a/new portfolio/main/index.html
+++ b/new portfolio/main/index.html
@@ -16,7 +16,7 @@
                 <center><li><a href="index.html">Home</a></li>
                 <li><a href="gallery.html">gallery</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="#contact">Contact</a></li></center>
+                <li><a href="contact.html">Contact</a></li></center>
             </ul>
         </nav>
     </header>
