--- a/airplane website/index.html
+++ b/airplane website/index.html
@@ -27,5 +27,7 @@
     <br>
     <img src="image copy 5.png" width="500">
     <h2>after after next month flying</h2>
+
+    <center><a href="index2.html"><button>our panter company's</button></a></center>
     </body>
 </html>
